# rust-chickenize

./: .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  README.md
examples/: ChickenWrap.java  chicken_wrap.js  chicken_wrap.pl  chicken_wrap.py  chicken_wrap.rb  chicken_wrap.rs
src/: lib.rs  loremipsum.rs
tests/: basic_test.rs  wasm_test.rs
